k8s_fichiers/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-portfolio
  template:
    metadata:
      labels:
        app: my-portfolio
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
        - name: portfolio
          image: safeer932/safeer-portefolio:latest
          ports:
            - containerPort: 80
