k8s_fichiers/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-portfolio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: safeerportfolio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-portfolio
            port:
              number: 80
